--- a/kirikae.html
+++ b/kirikae.html
@@ -43,9 +43,9 @@
 </head>
 <body>
   <div class="slideshow-container">
-    <img src="https://drive.google.com/file/d/1ycjUnT4_Qx04kdrxIBoVdaP9l03zbXSY/view?usp=sharing" class="active" alt="画像1">
-    <img src="https://drive.google.com/file/d/1YJce1o8ng87PVVykfIeTmhmcttcAc3i-/view?usp=sharing" alt="画像2">
-    <img src="https://drive.google.com/file/d/191TCErKCqwBC5dhilK5UPRDvJ0FCawpZ/view?usp=drive_link" alt="画像3">
+    <img src="https://media.istockphoto.com/id/1419205834/vector/city-night-background.jpg?s=612x612&w=0&k=20&c=fgGbJZ6u5-GyTBccv9lLBs33CiealSi-m4SgAVmAbBQ=" class="active" alt="画像1">
+    <img src="https://www.shutterstock.com/image-vector/bullet-train-night-skyscrapers-lo-600nw-2362581237.jpg" alt="画像2">
+    <img src="https://img.freepik.com/free-vector/gradient-lo-fi-illustrations_52683-82981.jpg?semt=ais_hybrid&w=740" alt="画像3">
   </div>
 
   <script>
